Combine sendNotificationWithRealmData dev-only and production endpoints